--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@
   padding: 0;
   box-sizing: border-box;
  }
-
+html,body{
+    height:100%;
+    margin: 0;
+}
 html {
   box-sizing: border-box;
   font-size: 62.5%; 
@@ -14,7 +17,10 @@ html {
 body{
     background-image:url(img/background-janko-ferlic.jpg);
     background-position: auto;    
-    font-family:'Times New Roman', Times, serif
+    font-family:'Times New Roman', Times, serif;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 }
 
 /* for the quotes and add button */
@@ -23,7 +29,7 @@ body{
     justify-content: space-between;
     background-color:rgba(242, 242, 242, 0.203);
     border-radius:9px;
-  @media screen and (max-width: 1200px) {
+     @media screen and (max-width: 1200px) {
     flex-direction: column;   
     justify-content:center;
     align-items: center;     
@@ -32,7 +38,10 @@ body{
     
 }
 
+.main-container{
+    flex:1;
 
+}
 
 .container{
     margin:28px auto;
@@ -78,12 +87,13 @@ body{
 .new_book{
     display:grid;
     position: relative;
-    /* overflow:auto; */
+    overflow:auto;
     grid-template-columns: repeat(2, .5fr);
     font-size:2rem;
     width:500px;
     grid-gap:10px;
     padding:3rem;
+    word-break: break-word;
     background-color: #272727d7;
     border-radius:9px;
     box-shadow: 1px 2px 15px gray,1px 2px 25px rgba(104, 88, 246, 0.301);
@@ -95,7 +105,7 @@ body{
     color:#4bb6fe;
  }
 
- .new_book_h{
+.new_book_h{
     color:rgb(255, 194, 194);    
     font-size:21px;
  }
@@ -371,4 +381,26 @@ button[type="submit"] {
     font-size:16px;
 }
 
+footer{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width:100%; 
+    height:9rem ;
+    margin-top: auto;
+    background-color: rgba(24, 3, 142, 0.475);
+}
 
+footer >p{
+    color:white;
+    font-size: 2rem;
+}
+
+footer img{
+  
+    width:3%;
+}
+footer a:link,a:visited{
+    color:rgb(61, 253, 237);
+}
