--- a/style.css
+++ b/style.css
@@ -69,6 +69,32 @@ body{
     margin-bottom:1rem;
 }
 
+.information{
+    color:rgb(176, 255, 218);    
+    width:25% !important;
+    display:flex;
+    flex-direction: column;
+    gap:12px;
+    background-color: #3f003f85;
+    @media screen and (max-width: 1200px) {
+   font-size:3rem;
+   /* padding:2rem;      */
+   width:50% !important
+    
+    }
+
+    
+}
+
+#library_heading{
+    color:yellow;
+    font-size:3rem;
+
+}
+.information_row{
+    display:flex;
+    justify-content: space-between;
+}
 
 /* section for adding new books by users */
 .add_books_section{
@@ -127,14 +153,13 @@ color:rgb(219, 249, 241);
 }
 
 #openModalBtn{
-    width:300px;
-    height:250px;
+    width:250px;
     border:none;
     background-color:#159ef9;
     border-radius:20%;
     margin:5rem;
     box-shadow: 1px 2px 15px rgb(3, 3, 3),1px 2px 15px rgba(104, 88, 246, 0.301);
-    transition:all .2s;
+    transition:all .2s;cursor:pointer;
     animation: formDown 1s ease-in-out;
 
 }
@@ -184,7 +209,7 @@ color:rgb(219, 249, 241);
   left: 0;
   top: 0;
   width: 100%;
-  height: 75%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.215);
   backdrop-filter: blur(3px);
     animation: formDown .8s ease-in-out;
@@ -196,14 +221,19 @@ color:rgb(219, 249, 241);
   padding: 15px;
   border-radius: 15px;
   width: 45%;
-  height:auto;
+  height:80%;
   top:50%;
   left:50%;
   transform:translate(-50%,-50%);
   position:absolute;
   background-color: rgb(2, 2, 166);
 
+    @media screen and (max-width: 1200px) {
+   height:100%    ;    
+    };
 }
+
+
 
 .close {
   float: right;
@@ -230,6 +260,8 @@ color:black;background-color: #fff;
     padding:16px;
     
 }
+
+
 
 textarea::placeholder {
   color: #1542f4;
@@ -409,7 +441,7 @@ footer{
 
 footer >p{
     color:white;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 footer img{
