--- a/style.css
+++ b/style.css
@@ -176,11 +176,32 @@ color:rgb(219, 249, 241);
     }
 }
 
-#plus{
+.btnAddMinus{
+    /* background-color: #bdfd8b; */
     color:rgba(1, 25, 243, 0.432);
     font-size:20rem;
     display:flex;
     justify-content: center;
+      border: none;
+  border-radius:35px;
+
+}
+
+#minus{
+    color:red;
+    position:relative;
+}
+
+#delete_input_id{
+    padding:4rem;
+    margin:2rem;
+    align-self: center;
+    text-align: center;
+    font-size:3rem
+}
+
+.hidden{
+    display:none;
 }
 
 #openModalBtn:active{
@@ -198,8 +219,10 @@ color:rgb(219, 249, 241);
     cursor:pointer;
     font-size: 25px;
     font-weight:900;
+}
 
-
+#book_id{
+    text-transform: lowercase;
 }
 /* for modal view */
 .modal {
@@ -218,10 +241,11 @@ color:rgb(219, 249, 241);
 
 .modal-content {
   color:white;
+  overflow: auto;
   padding: 15px;
   border-radius: 15px;
-  width: 45%;
-  height:80%;
+  width: 35%;
+  height:60%;
   top:50%;
   left:50%;
   transform:translate(-50%,-50%);
@@ -229,12 +253,10 @@ color:rgb(219, 249, 241);
   background-color: rgb(2, 2, 166);
 
     @media screen and (max-width: 1200px) {
-   height:100%    ;    
+   height:80%    ;    
     };
+    
 }
-
-
-
 .close {
   float: right;
   font-size: 38px;
@@ -253,15 +275,12 @@ border:.5px inset black;
 color:black;background-color: #fff;
 }
 
-
 #user-input_summary{
     resize:none;
     margin-bottom:1rem;
     padding:16px;
     
 }
-
-
 
 textarea::placeholder {
   color: #1542f4;
@@ -284,14 +303,11 @@ button[type="submit"] {
   margin-bottom:3rem;
 }
 
-
 #btn-submit:active{
     transform:scale(.89);
     transform:translatey(6px);
     box-shadow: .0px 1px 5px rgb(0, 0, 0);
-
 }
-
 
 #library-form{
     display:flex;
