--- a/style.css
+++ b/style.css
@@ -241,11 +241,11 @@ color:rgb(219, 249, 241);
 
 .modal-content {
   color:white;
-  overflow: auto;
+  /* overflow: auto; */
   padding: 15px;
   border-radius: 15px;
   width: 35%;
-  height:60%;
+  /* height:60%; */
   top:50%;
   left:50%;
   transform:translate(-50%,-50%);
@@ -253,7 +253,7 @@ color:rgb(219, 249, 241);
   background-color: rgb(2, 2, 166);
 
     @media screen and (max-width: 1200px) {
-   height:80%    ;    
+   height:85%    ;    
     };
     
 }
